Showing 2 more examples for web api and swagger documentation: Chat API and Offer API. Added automated coping of bean properties. Also this codesshows the handlng of Dto-classes using the base class read-method.